fixing center glitch for ejeiogje dark mode you get the idea

--- a/styles/darkmodemain.css
+++ b/styles/darkmodemain.css
@@ -9,6 +9,12 @@
     justify-self: center;
 }
 
+#questionMaker {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
 button{
     height:5em;
     margin-bottom:0.5em;
